early merge of changes by sdu